--- a/CIUtil/CIUtil.csproj
+++ b/CIUtil/CIUtil.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="CompoundingFunctionality\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CompoundingFunctionality\" />
+  </ItemGroup>
 </Project>
